--- a/.github/workflows/airflow_env.yml
+++ b/.github/workflows/airflow_env.yml
@@ -30,6 +30,6 @@ jobs:
         with:
           host: ec2-52-72-97-88.compute-1.amazonaws.com  # Your EC2 Host name
           username: airflow  # Your EC2 Username
-          key: ${{ secrets.SSH_PRIVATE_KEY }}  # Secret Variable we created
-          source: Sample_ETL_Dag.py  # This is our Source File name placed in Airflow-scripts Folder
+          key: ${{ secrets.RSA_PRIVATE_KEY }}  # Secret Variable we created
+          source: gsheet_to_s3_to_rds.py  # This is our Source File name placed in Airflow-scripts Folder
           target: /home/airflow/airflow/dags/  # Your target folder in EC2 where you want to create the file
