--- a/.github/workflows/airflow_env.yml
+++ b/.github/workflows/airflow_env.yml
@@ -7,7 +7,7 @@ on:
   push: 
     
     branches:  
-      - main
+      - master
     
     paths: 
       - 'dags/**'  # this is our Folder name we created for Airflow
